--- a/index.html
+++ b/index.html
@@ -122,6 +122,23 @@
     a:hover {
       text-decoration: underline;
     }
+
+    .download-btn {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.5rem 1rem;
+      background-color: var(--accent-color);
+      color: var(--bg-color);
+      border: none;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+
+    .download-btn:hover {
+      background-color: #005fcc;
+    }
   </style>
 </head>
 <body data-theme="light">
@@ -151,8 +168,20 @@
   </section>
 
   <section>
-    <h2>Proyek</h2>
+    <h2>Sertifikat</h2>
     <div class="card scroll-animate">
+      <ul>
+        <li>📄 Sertifikat Praktik Kerja Lapangan – PT. Jalur Satu Aman</li>
+        <li>🧠 Bootcamp Digital Business & Cyber Security – UNAS & UNSIA</li>
+        <li>🏆 Juara 1 Lomba Cyber Security Nasional – 2024</li>
+        <li>🎓 Sertifikat Pelatihan Pusat Kerja Daerah – Dinas Tenaga Kerja</li>
+      </ul>
+    </div>
+  </section>
+
+  <section>
+    <h2>Proyek</h2>
+        <div class="card scroll-animate">
       <h3>Membangun Jaringan LAN/WAN</h3>
       <p>Semua perangkat terkoneksi dengan IP statis atau dinamis, internet stabil, dan VLAN aktif.</p>
     </div>
@@ -172,6 +201,7 @@
       <p>
         <a href="https://www.instagram.com/farrelioyoshi/" target="_blank">🔗 Instagram</a>
       </p>
+      <a href="putih dan hitam modern cv resume riwayat hidup.pdf" class="download-btn" download>⬇️ Unduh CV</a>
     </div>
   </section>
 
