--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <section>
       <h2><i class="fas fa-user"></i> Tentang Saya</h2>
       <div class="card scroll-animate">
-        <img src="WhatsApp Image 2025-11-13 at 19.10.10_8348cf66.jpg" alt="Foto Farrelio Yoshi" class="profile">
+        <img src="my bini.jpg" alt="Foto Farrelio Yoshi" class="profile">
         <p>Saya adalah lulusan SMK jurusan Teknik Komputer dan Jaringan (TKJ) dengan pengetahuan dasar jaringan, perangkat keras, dan sistem operasi. Memiliki semangat belajar tinggi serta mampu bekerja sama dalam tim.</p>
       </div>
     </section>
