--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <section>
       <h2><i class="fas fa-user"></i> Tentang Saya</h2>
       <div class="card scroll-animate">
-        <img src="my bini.jpg" alt="Foto Farrelio Yoshi" class="profile">
+        <img src="WhatsApp Image 2025-11-13 at 19.10.10_8348cf66.jpg" alt="Foto Farrelio Yoshi" class="profile">
         <p>Saya adalah lulusan SMK jurusan Teknik Komputer dan Jaringan (TKJ) dengan pengetahuan dasar jaringan, perangkat keras, dan sistem operasi. Memiliki semangat belajar tinggi serta mampu bekerja sama dalam tim.</p>
       </div>
     </section>
@@ -277,6 +277,16 @@
           <li><i class="fas fa-brain"></i> Bootcamp Digital Business & Cyber Security – UNAS & UNSIA</li>
           <li><i class="fas fa-trophy"></i> Juara 1 Lomba Cyber Security Nasional – 2024</li>
           <li><i class="fas fa-chalkboard-teacher"></i> Sertifikat Pelatihan Pusat Kerja Daerah – Dinas Tenaga Kerja</li>
+        </ul>
+      </div>
+    </section>
+
+    <section>
+      <h2><i class="fas fa-chalkboard-teacher"></i> Pelatihan yang Pernah Diikuti</h2>
+      <div class="card scroll-animate">
+        <ul>
+          <li><i class="fas fa-brain"></i> Pelatihan Bootcamp Digital Business & Cyber Security – 2024</li>
+          <li><i class="fas fa-chalkboard-teacher"></i> Pusat Pelatihan Kerja Daerah Tekom – 2025</li>
         </ul>
       </div>
     </section>
