--- a/index.html
+++ b/index.html
@@ -6,241 +6,7 @@
   <title>Portofolio Farrelio Yoshi</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <style>
-    :root {
-      --bg-color: #ffffff;
-      --text-color: #1a1a1a;
-      --accent-color: #0077ff;
-      --secondary-bg: #f8f9fa;
-      --shadow: rgba(0,0,0,0.1);
-    }
-
-    [data-theme="dark"] {
-      --bg-color: #1a1a1a;
-      --text-color: #ffffff;
-      --accent-color: #00bfff;
-      --secondary-bg: #2d2d2d;
-      --shadow: rgba(255,255,255,0.1);
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      transition: background-color 0.3s ease, color 0.3s ease;
-    }
-
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      line-height: 1.6;
-      overflow-x: hidden;
-    }
-
-    .hero {
-      background: linear-gradient(135deg, var(--accent-color), #005fcc);
-      color: white;
-      padding: 4rem 2rem;
-      text-align: center;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .hero::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="2" fill="rgba(255,255,255,0.1)"/></svg>') repeat;
-      opacity: 0.1;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-      font-weight: 700;
-      margin-bottom: 0.5rem;
-      z-index: 1;
-      position: relative;
-    }
-
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-      z-index: 1;
-      position: relative;
-    }
-
-    .hero nav {
-      z-index: 1;
-      position: relative;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 2rem;
-    }
-
-    section {
-      margin-bottom: 4rem;
-      padding: 2rem 0;
-    }
-
-    section h2 {
-      font-size: 2rem;
-      font-weight: 600;
-      margin-bottom: 2rem;
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-
-    .card {
-      background: var(--secondary-bg);
-      padding: 2rem;
-      border-radius: 15px;
-      margin-top: 1rem;
-      box-shadow: 0 8px 25px var(--shadow);
-      transition: transform 0.3s ease, opacity 0.6s ease, box-shadow 0.3s ease;
-      opacity: 0;
-      transform: translateY(30px);
-      border: 1px solid rgba(0,0,0,0.05);
-    }
-
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 12px 35px var(--shadow);
-    }
-
-    .card.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    .card h3 {
-      font-weight: 600;
-      margin-bottom: 1rem;
-      transition: color 0.3s ease;
-    }
-
-    .card h3:hover {
-      color: var(--accent-color);
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem 0;
-      font-size: 0.9rem;
-      opacity: 0.7;
-      background: var(--secondary-bg);
-    }
-
-    @keyframes fadeInDown {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    img.profile {
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 50%;
-      margin-bottom: 1.5rem;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      border: 5px solid var(--accent-color);
-      box-shadow: 0 8px 25px var(--shadow);
-    }
-
-    a {
-      color: var(--accent-color);
-      text-decoration: none;
-      transition: color 0.3s ease;
-    }
-
-    a:hover {
-      color: #005fcc;
-      text-decoration: underline;
-    }
-
-    .download-btn {
-      display: inline-block;
-      margin-top: 1.5rem;
-      padding: 0.75rem 1.5rem;
-      background-color: var(--accent-color);
-      color: white;
-      border: none;
-      border-radius: 25px;
-      text-decoration: none;
-      font-weight: 600;
-      transition: all 0.3s ease;
-      box-shadow: 0 4px 15px rgba(0,119,255,0.3);
-    }
-
-    .download-btn:hover {
-      background-color: #005fcc;
-      transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(0,119,255,0.4);
-    }
-
-    nav button {
-      background: rgba(255,255,255,0.2);
-      border: 2px solid white;
-      color: white;
-      padding: 0.75rem 1.5rem;
-      cursor: pointer;
-      border-radius: 25px;
-      font-weight: 600;
-      transition: all 0.3s ease;
-      backdrop-filter: blur(10px);
-    }
-
-    nav button:hover {
-      background: white;
-      color: var(--accent-color);
-      transform: translateY(-2px);
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    ul li {
-      padding: 0.5rem 0;
-      border-bottom: 1px solid rgba(0,0,0,0.1);
-    }
-
-    ul li:last-child {
-      border-bottom: none;
-    }
-
-    @media (max-width: 768px) {
-      .hero h1 {
-        font-size: 2.5rem;
-      }
-      .hero p {
-        font-size: 1rem;
-      }
-      .container {
-        padding: 0 1rem;
-      }
-      section {
-        padding: 1rem 0;
-      }
-      .card {
-        padding: 1.5rem;
-      }
-      img.profile {
-        width: 150px;
-        height: 150px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body data-theme="light">
   <div class="hero">
@@ -265,7 +31,7 @@
       <div class="card scroll-animate">
         <p><strong>SMKS Poncol Jakarta Pusat</strong></p>
         <p>Jurusan Teknik Komputer dan Jaringan (TKJ)</p>
-        <p>Lulus tahun 2026 dengan peminatan pada jaringan komputer dan sistem operasi</p>
+        <p>Lulus tahun 2026 dengan peminatan pada jaringan komputer dan sistem operasi.</p>
       </div>
     </section>
 
@@ -314,7 +80,7 @@
         <p>
           <a href="https://www.instagram.com/farrelioyoshi/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
         </p>
-        <a href="putih dan hitam modern cv resume riwayat hidup.pdf" class="download-btn" download><i class="fas fa-download"></i> Unduh CV</a>
+        <a href="CV FARRELIO YOSHI.pdf" class="download-btn" download><i class="fas fa-download"></i> Unduh CV</a>
       </div>
     </section>
   </div>
@@ -323,26 +89,6 @@
     &copy; 2025 Farrelio Yoshi. Dibuat dengan ❤️ dan semangat.
   </footer>
 
-  <script>
-    function toggleTheme() {
-      const body = document.body;
-      const currentTheme = body.getAttribute("data-theme");
-      body.setAttribute("data-theme", currentTheme === "light" ? "dark" : "light");
-    }
-
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('visible');
-        }
-      });
-    }, {
-      threshold: 0.2
-    });
-
-    document.querySelectorAll('.scroll-animate').forEach(card => {
-      observer.observe(card);
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
