--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body data-theme="light">
   <div class="hero">
     <h1>Halo, Saya Farrelio Yoshi</h1>
+    <p>Web Developer | Engineering | Freelancer</p>
     <nav>
       <button onclick="toggleTheme()">🌗 Ganti Tema</button>
     </nav>
