--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         <p>Semua perangkat terkoneksi dengan IP statis atau dinamis, internet stabil, dan VLAN aktif.</p>
       </div>
       <div class="card scroll-animate">
-        <h3>Konfigurasi Router dan Switch (Cisco, Mikrotik, dll.)</h3>
+        <h3>Konfigurasi Mikrotik</h3>
         <p>Routing statis atau dinamis berjalan (RIP, OSPF), firewall aktif dan NAT berfungsi.</p>
       </div>
       <div class="card scroll-animate">
-        <h3>Pembuatan Topologi Jaringan Virtual</h3>
+        <h3>Pembuatan Topologi Jaringan Virtual (Cisco Packet Tracer)</h3>
         <p>Topologi kompleks dengan simulasi real.</p>
       </div>
     </section>
