--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <p>Semua perangkat terkoneksi dengan IP statis atau dinamis, internet stabil, dan VLAN aktif.</p>
       </div>
       <div class="card scroll-animate">
-        <h3>Konfigurasi Mikrotik</h3>
-        <p>Routing statis atau dinamis berjalan (RIP, OSPF), firewall aktif dan NAT berfungsi.</p>
+        <h3>Konfigurasi ONT/Modem</h3>
+        <p>Koneksi WAN aktif dan terhubung ke jaringan ISP.</p>
       </div>
       <div class="card scroll-animate">
         <h3>Pembuatan Topologi Jaringan Virtual (Cisco Packet Tracer)</h3>
