--- a/index.html
+++ b/index.html
@@ -61,15 +61,24 @@
       <h2><i class="fas fa-project-diagram"></i> Proyek</h2>
       <div class="card scroll-animate">
         <h3>Membangun Jaringan LAN/WAN</h3>
-        <p>Semua perangkat terkoneksi dengan IP statis atau dinamis, internet stabil, dan VLAN aktif.</p>
+        <div class="project-content">
+          <img src="WhatsApp Image 2026-01-21 at 22.03.35.jpeg" alt="Membangun Jaringan LAN/WAN" class="project-image">
+          <p>Proyek ini berfokus pada proses perancangan dan implementasi jaringan LAN dan WAN secara nyata. Kamu mempelajari cara menghubungkan beberapa perangkat dalam satu lokasi dan antar lokasi yang berbeda. Kegiatan mencakup penentuan jenis jaringan, pemilihan perangkat, pengaturan alamat IP, serta pengujian koneksi. Melalui proyek ini, kamu melatih kemampuan membaca kebutuhan jaringan dan menerapkannya dalam bentuk konfigurasi yang tepat. Hasil yang diharapkan adalah jaringan yang stabil, terstruktur, dan dapat digunakan sesuai fungsi yang direncanakan.</p>
+        </div>
       </div>
       <div class="card scroll-animate">
         <h3>Konfigurasi ONT/Modem</h3>
-        <p>Koneksi WAN aktif dan terhubung ke jaringan ISP.</p>
+        <div class="project-content">
+          <img src="WhatsApp Image 2026-01-21 at 22.03.34.jpeg" alt="Konfigurasi ONT/Modem" class="project-image">
+          <p>Proyek ini membahas langkah-langkah konfigurasi ONT atau modem sebagai pintu utama koneksi internet. Kamu mempelajari fungsi ONT atau modem dalam menghubungkan jaringan lokal dengan jaringan penyedia layanan. Kegiatan meliputi pengaturan mode koneksi, konfigurasi IP, pengaturan keamanan dasar, serta pengecekan status koneksi. Proyek ini membantu kamu memahami alur data dari jaringan lokal menuju internet. Pemahaman ini penting agar kamu mampu melakukan instalasi dan pemeliharaan jaringan secara mandiri.</p>
+        </div>
       </div>
       <div class="card scroll-animate">
         <h3>Pembuatan Topologi Jaringan Virtual (Cisco Packet Tracer)</h3>
-        <p>Topologi kompleks dengan simulasi real.</p>
+        <div class="project-content">
+          <img src="WhatsApp Image 2026-01-21 at 22.06.43.jpeg" alt="Topologi Jaringan Virtual Cisco Packet Tracer" class="project-image">
+          <p>Proyek ini menitikberatkan pada perancangan topologi jaringan dalam lingkungan virtual. Kamu menggunakan Cisco Packet Tracer untuk menyusun perangkat jaringan seperti router, switch, dan komputer. Kegiatan mencakup pemilihan topologi, konfigurasi perangkat, serta simulasi pengiriman data. Melalui proyek ini, kamu dapat menguji desain jaringan tanpa perangkat fisik. Kamu juga belajar menganalisis kesalahan konfigurasi dan memperbaikinya sebelum diterapkan pada jaringan nyata.</p>
+        </div>
       </div>
     </section>
 
